hashicorp-vault/k8s/vault-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
spec:
  serviceName: "vault"
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.15
          command: ["vault"]
          args: ["server", "-config=/vault/config/config.hcl"]
          ports:
            - containerPort: 8200
          volumeMounts:
            - name: vault-storage
              mountPath: /vault/data
            - name: vault-config
              mountPath: /vault/config
      volumes:
        - name: vault-config
          configMap:
            name: vault-config
  volumeClaimTemplates:
    - metadata:
        name: vault-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
