hashicorp-vault/k8s/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
spec:
  ports:
    - port: 8200
      targetPort: 8200
  clusterIP: None
  selector:
    app: vault
